--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - ./backend:/app
     ports:
       - "80:3000"
+    env_file:
+      - ./backend/.env
     restart: "always"
     command: npm run start:dev
     depends_on:
